unreleased changes
==================

- added support for specifying typed factory component selectors on a per-factory basis

- added support for using services as mixins

- added autogenerated delegate-based factories. Taking dependency on Func<IFoo> and calling the delegate will return IFoo from the container

- implemented IOC-ISSUE-203 - Add to fluent API scanning assemblies for IWindsorInstallers and installing them

- added fluent API for EventWiringFacility

- added ability to specify assemblies that will be scanned for types when shorthened type name is using via XML using the following syntax:
	<using assembly="Assembly name or path to file.dll" />

- added ability to specify installers (IWindsorInstaller) via XML using either of the following:
  <installers>
    <install type="Castle.Windsor.Tests.Installers.CustomerInstaller"/>
    <install assembly="Castle.Windsor.Tests"/>
  </installers>
  installers must be public and have default constructor.

- Xml config does not require assembly qualified type name any more - specifying just type name, or typename+namespace should be enough. Works only for types in already loaded assemblies.

- ResolveAll will now resolve components that are not in Valid state when inline/dynamic arguments are provided

- TypedFactoryFacility: TypedFactoryComponent will now fallback to resolving by type if no component with designated name can be found

- fixed issue with per-web-request components not being released properly in some cases

- fixed IOC-ISSUE-199 - NamingPartsSubSystem broken when RegisterHandlerForwarding is used

- TypedFactoryFacility: added ability to resolve multiple components

- TypedFactoryFacility: added ability to put custom resolving logic

- fixed another case of IoC-168 where a component with two constructors of different parameter length couldn't be resolved when the fewer parameter constructor was not satisfied
