@@ -17,9 +17,9 @@ namespace Castle.Windsor.Tests
 	using System;
 	using System.Reflection;
 
-	using Castle.MicroKernel.Proxy;
+	using Castle.DynamicProxy;
 
-	public class ProxyAllHook : IProxyHook
+	public class ProxyAllHook : IProxyGenerationHook
 	{
 		public static int Instances;
 		public ProxyAllHook()
@@ -32,7 +32,7 @@ namespace Castle.Windsor.Tests
 			return true;
 		}
 
-		public void NonVirtualMemberNotification(Type type, MemberInfo memberInfo)
+		public void NonProxyableMemberNotification(Type type, MemberInfo memberInfo)
 		{
 		}
 
